--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,14 @@
   </head>
 
   <body>
-    <h1>Please input a string</h1>
-    <form method="POST" action="/">
-      <div class="form-group">
-        <input type="text" name="target">
-      </div>
-      <input class="btn btn-primary" type="submit" value="submit">
+    <h1>Welcome to Quipper! Please login or register below!</h1>
+
+    <a href="/login">
+      <input type="button" value="Login" />
+    </a>
+    <a href="/register">
+      <input type="button" value="Register" />
+    </a>
     </form>
   </body>
 
