added user functionality

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
 <form method="POST" action="/timeline">
-  <h1> timeline </h1>
+  <h1> Welcome {{user}}! This is your timeline! </h1>
 </form>
 </html>
