--- a/templates/direct_tweet.html
+++ b/templates/direct_tweet.html
@@ -12,10 +12,17 @@
 <a href="/">Logout</a>
 <a href="/timeline">Timeline</a>
 <a href="/users">UserList</a>
-<form method="POST" action="/timeline" enctype="multipart/form-data">
+
+
+<form method="POST" action="/tweets/{{tid}}" enctype="multipart/form-data">
+    <div class="container">
+        <div class="panel panel-default">
+          <h style="color:black;">{{dict[target[0]]}}</h>
+          <p style="color:black;">{{target[2]}}</p>
+        </div>
+    </div>
         <p>
-          <label>Text Area</label>
-          <textarea name = "tweet"
+          <textarea name = "comment"
                   rows = "3"
                   cols = "80" ></textarea>
         </p>
@@ -23,16 +30,15 @@
         Browse <input type="file" name="file">
       </span> -->
 
-    <input type="submit" value="Tweet it!" class="btn btn-primary">
-  <h1> Welcome {{user}}! This is your timeline! </h1>
+    <input type="submit" value="Post Comment!" class="btn btn-primary">
+  <h1> Comments: </h1>
   <div>
     {% for msg in msgs %}
     <div class="container">
-      <a href="/tweets/{{msg[1]}}" style="text-decoration:none">
         <div class="panel panel-default">
           <h style="color:black;">{{dict[msg[0]]}}</h>
+          <p style="color:black;">{{msg[1]}}</p>
           <p style="color:black;">{{msg[2]}}</p>
-          <p style="color:black;">{{msg[3]}}</p>
         </div>
       </a>
     </div>
