--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -1,5 +1,8 @@
 <!DOCKTYPE html>
 <html>
+<a href="/">Logout</a>
+<a href="/timeline">Timeline</a>
+<a href="/users">UserList</a>
 <body>
 <ul>
   {% for user in users %}
